# seeem

./: LICENSE  README.md  header.html  pyproject.toml  seeem.py
src/seeem/: __init__.py  seeem.py
tests/: test.py
