[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seeem"
version = "0.0.3"
authors = [
  { name="Richard E.L. Higgins", email="richard@relh.net" },
]
description = "See'em is a simple utility to visualize images, masks, points on images, and more. It also includes a meta webpage for collating all results in a single place :)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/seeem"
"Bug Tracker" = "https://github.com/pypa/seeem/issues"
